[package]
name = "scheduler_controller"
version = "0.1.0"
authors = ["WANG Guan <netspecters@126.com>"]
edition = "2018"


[dependencies]
tonic = "0.4.3"
prost = "0.7.0"
tokio = { version = "1.7.1", features = ["full"] }
prometheus = { version = "0.12.0", features = ["process"] }
warp = "0.3.1"
redis = { version = "0.20.2", features = ["tokio-comp", "cluster"] }
fern = "0.6.0"
log = "0.4.14"
chrono = "0.4.19"
serde = { version =  "1.0.126", features = ["derive"] }
snap = "1.0.5"
nanoid = "0.4.0"
flume = "0.10.7"

[build-dependencies]
tonic-build = "0.4.2"
